@@ -2,9 +2,12 @@ include cext.h
 recursive-include pyliblinear *.c *.h
 
 include README.md LICENSE
+recursive-include tests *
+
+prune tasks
 
 recursive-include docs *
 prune docs/_userdoc
 prune docs/coverage
 prune docs/gcov
-exclude docs/userdoc/.buildinfo
+exclude docs/userdoc/website_download.html
