@@ -1,5 +1,7 @@
 Changes with version
 
+ *) Add tests to source distribution
+
  *) Update doc format
 
  *) Ensure the extension is versioned as expected
